Fix anchors
Found no better solution since scroll-padding-top didn't work for me,
apparently doesn't work with IE nor Edge.

Credit: https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors

--- a/src/mrs/static/sass/Header.sass
+++ b/src/mrs/static/sass/Header.sass
@@ -1,5 +1,11 @@
 @import './mixins.sass'
 
+.anchor
+  display: block
+  height: 5.1rem
+  margin-top: -5.1rem
+  visibility: hidden
+
 .Header--wrapper
   +barlow-condensed-bold()
   $headerHeight: 5rem
